syntax = "proto3";

message Record {
  PlayerBasicInfo player_info = 1;
  PlayerCurrentData player_cur_data = 2;
  int64 last_save_timestamp = 3;
}

message PlayerBasicInfo {
  string pid = 1;
  string name = 2;
  int64 create_time = 3;
}

message PlayerCurrentData {
  uint32 hero_id = 1;
  uint32 level = 2;
  uint32 hp = 3;
  uint32 exp = 4;
  uint32 weapon_id = 5;
  repeated RoomData room_info_list = 6;
  ShopData shop_info = 7;
}

message RoomData {
  uint32 id = 1;
  bool finished = 2;
}

message ShopData {
  uint32 owned_currency = 1;
  repeated uint32 bought_items = 2;
}

enum Retcode {
  SUCCESS = 0;
  ERROR = 1;
  // Shop
  NOT_ENOUGH_CURRENCY = 2;
  ITEM_ALREADY_BOUGHT = 3;
  ITEM_NOT_FOUND = 4;
}